@@ -30,15 +30,15 @@ def parse_date_liberally(string, parse_kwargs_dict=None):
     in accepting user-specified dates on command-line scripts.
 
     Args:
-      parse_kwargs_dict: Dict of kwargs to pass to dateutil parser.
       string: A string to parse.
+      parse_kwargs_dict: Dict of kwargs to pass to dateutil parser.
     Returns:
       A datetime.date object.
     """
     # At the moment, rely on the most excellent dateutil.
-    if parse_kwargs_dict:
-        return dateutil.parser.parse(string, **parse_kwargs_dict).date()
-    return dateutil.parser.parse(string).date()
+    if parse_kwargs_dict is None:
+        parse_kwargs_dict = {}
+    return dateutil.parser.parse(string, **parse_kwargs_dict).date()
 
 
 def render_ofx_date(dtime):
